# multicast-rs

./: .deny.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
examples/: batch_deserialize_example.rs  json_publisher_example.rs  publisher_example.rs  serialization_benchmark.rs  subscriber_example.rs
src/: lib.rs  publisher.rs  subscriber.rs
