[package]
name = "multicast-rs"
version = "1.0.0"
edition = "2024"
authors = ["Hicham Medkouri <hicham@anaxo.io>"]
description = "A Rust library for IPv4 and IPv6 multicast networking"
repository = "https://github.com/hmedkouri/multicast-rs"
license = "MIT"
keywords = ["multicast", "networking", "ipv4", "ipv6", "udp"]
categories = ["network-programming", "api-bindings"]
readme = "README.md"
include = [
    "examples/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
once_cell = "^1.21"
socket2 = { version = "^0.5", features = ["all"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
bincode = "^1.3"